# emotion-detector

./: README.md  extract_data.sh  pyproject.toml
models/: log_regression.pkl  random_forest.pkl
src/: create_model.py  detect_emotions.py  export_training_data.py
