[project]
name = "emotion-detector"
version = "0.1.0"
description = "A simple python project to detect emotions using FaceMeshDetector and ML Models"
authors = [
    {name = "Francisco Javier Martínez Páez", email = "fjmpaez@izertis.com" }
]
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "cv (>=1.0.0,<2.0.0)",
    "cvzone (>=1.6.1,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false